--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 axum = { version = "0.7.3", features = ["macros"] }
 serde = { version = "1.0.194", features = ["derive"]}
 serde_json = "1.0"
-serde_yaml = "0.9.3"
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 kube = { version = "0.87.2", features = ["runtime", "derive"] }
 k8s-openapi = { version = "0.20.0", features = ["latest"] }
 tower-http = { version = "0.5.0", features = ["trace"] }
+tower = "0.4.13"
